# diana_test

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
books/: admin.py  factories.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
books/management/commands/: populate_db.py
books/managers/: user.py
books/migrations/: 0001_initial.py  0002_alter_customuser_username.py
diana_tst/: asgi.py  settings.py  urls.py  wsgi.py
